2003-01-07  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b2

	* Finally made NetPBM's ppmtojpeg/pnmtojpeg an explicit configuration
	  option, instead of trying to autodetect it.  We default to pnmtojpeg,
	  which is forward looking.

2003-01-04  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b1

	* Added the server IP address to the setup/session_test diagnostic to
	  help us find problems with load balanced configurations.

	* Patched ImageMagick's resize code to use single quotes around the *
	  in "+profile '*'" to avoid letting the shell expand the *.

	* Added patch from Kevin Amorin to allow Windows XP publishing to use
	  file names as captions.

	* Enabled hi-tech slideshow for Opera5 also.

	* Fixed the new-album-causes-strange-reordering bug (see 1.3.3-cvs-b1)
	  for Gallery Remote, also.

================================================================================
2002-12-27                      v1.3.3 release
================================================================================

2002-12-27  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b6

	* Fixed a bug in publish_xp_docs.php that allows a remote exploit by
	  not checking GALLERY_BASEDIR appropriately 
	  (introduced in v1.3.2-cvs-b27)

	* Renamed error() function to gallery_error() to avoid conflicts
	  in PostNuke code.

2002-12-14  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b5 

	* Added a configuration option to allow you to choose to print your 
	  photos on shutterfly without making a donation to the project.

	* Fixed a minor bug in the support for Nuke6's separate user table
	  prefix code.

2002-12-06  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b4

	* Minor improvement in setup/functions.inc:inOpenBaseDir

	* Added support for Nuke6's ability to have a separate prefix
	  for the user table.

2002-11-29  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b2

	* Fixed a bug in the slideshow code where it would crash if the last