@@ -13,7 +13,6 @@
 //      - Album Title: $gallery->album->fields["title"]    
 //      
 ?>
-
 <?php
 includeHtmlWrap("wrapper.header");
 ?>
