@@ -12,7 +12,6 @@
 //      - Gallery Title: $gallery->app->galleryTitle
 //
 ?>
-
 <?php
 includeHtmlWrap("wrapper.header");
 ?>
