@@ -104,7 +104,7 @@ if ($gallery->album->fields["textcolor"]) {
 
 <body>
 <?php } ?>
-
+<?php includeHtmlWrap("slideshow.header"); ?>
 
   <script language="JavaScript" SRC="<?php echo $gallery->app->photoAlbumURL ?>/js/client_sniff.js">
   </script>
@@ -413,7 +413,6 @@ function setCaption(text) {
 </Script>
 
 
-<?php includeHtmlWrap("slideshow.header"); ?>
 <?php
 $imageDir = $gallery->app->photoAlbumURL."/images"; 
 $pixelImage = "<img src=\"$imageDir/pixel_trans.gif\" width=\"1\" height=\"1\">";
