@@ -1,3 +1,13 @@
+2003-01-07  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b3
+
+	* Tightened up the leading HTML in the html_wrap files so that we don't
+	  generate any white space before including the wrapper.header.  Then,
+	  moved the includeHtmlWrap lines up for gallery, album, photo and
+	  slideshow.header.  This has the result of putting the resulting
+	  javascript inside the <body> tag which means that we don't generate
+	  any output until PostNuke gets a chance to call its various header
+	  functions.
+
 2003-01-07  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b2
 
 	* Finally made NetPBM's ppmtojpeg/pnmtojpeg an explicit configuration
